[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
name = "DME-course"
version = "1.0"
description = "This is a course on Data Mining and Exploration"

authors = [
    {name = "Raoul Grouls", email = "Raoul.Grouls@han.nl"},
]

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.25.2",
    "scipy>=1.9.3",
    "seaborn>=0.12.2",
    "polars>=0.19.2",
    "click>=8.1.7",
    "pydantic>=2.3.0",
    "loguru>=0.7.1",
    "plotly-express>=0.4.1",
    "quarto>=0.1.0",
    "pyarrow>=13.0.0",
    "scikit-learn>=1.3.0",
    "pymc==5.7.2",
    "arviz>=0.16.1",
    "streamlit>=1.26.0",
    "watchdog>=3.0.0",
    "pydeck>=0.8.0",
    "geopy>=2.4.0",
    "jupyter>=1.0.0",
    "fitter>=1.6.0",
    "mads-datasets>=0.3.4",
    "pandas-stubs>=2.0.3.230814",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

